fix: update dark mode styles for improved visibility and consistency across components

--- a/src/styles/sidebar.less
+++ b/src/styles/sidebar.less
@@ -144,7 +144,7 @@
 
     .news-sidebar_widget-link {
       color: var(--bodyTextColorWhite);
-      background-color: var(--background-main) !important;
+      background-color: var(--background-sections) !important;
     }
   }
 }
